arm64-board: BOOT IMAGE BUILDS + loads (clinit crash was the inliner)
lldb backtrace showed the "UnstartedRuntime clinit crash" was a red herring: the
real fault is HInliner::SubstituteArguments (optimizing compiler inliner null
deref). Two fixes build the arm64 boot image: --inline-max-code-units=0 (disable
inliner) + -j1 (arm64 compile races at -j4). boot.art ~5MB builds in ~4s via the
host x86 dex2oat (has ARM64 codegen) + a15 jars. The arm64 dalvikvm then LOADS
the image and runs Runtime::Start (native registration + root clinits + passes
verification). New frontier: a daemon thread exits without DetachCurrentThread
(thread.cc:2460) — not JIT (persists with -Xint); a bounded thread-lifecycle bug.
Recipe: build_boot_image_arm64.sh.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>